--- a/apps/web/public/locales/es/create-project.json
+++ b/apps/web/public/locales/es/create-project.json
@@ -1,4 +1,4 @@
 {
-  "seo-title": "Submit a Project",
-  "seo-description": "Submit a project to the portfolio"
+  "seo-title": "Enviar un Proyecto",
+  "seo-description": "Envía un proyecto al portafolio"
 }
