--- a/apps/web/public/locales/es/home.json
+++ b/apps/web/public/locales/es/home.json
@@ -1,27 +1,27 @@
 {
-  "title": "Discover the coolest projects",
-  "description": "Upload and share your projects with our community. A perfect place for students, professionals, and hobbyists to showcase their work.",
+  "title": "Descubre los proyectos más geniales",
+  "description": "Sube y comparte tus proyectos con nuestra comunidad. Un lugar perfecto para que estudiantes, profesionales y aficionados muestren su trabajo.",
   "seo-title": "Project Shelf",
-  "signup": "Sign up",
-  "likes:": "Likes",
-  "top-creators": "Top Creators",
-  "top-creators-subtitle": "Checkout top rated creators in our community",
-  "view-rankings": "View Rankings",
-  "discover-more-projects": "Discover More Projects",
-  "discover-more-projects-subtitle": "Explore new trending projects",
-  "see-all-projects": "See All Projects",
-  "see-project": "See Project",
-  "how-it-works": "How it works",
-  "find-out": "Find out how to get started",
-  "sign-up": "Sign up",
-  "sign-up-description": "Sign up with your GitHub account.",
-  "create-a-project": "Create a project",
-  "create-project-description": "Create a project and add a description, tags, and a cover image.",
-  "share-project": "Share your project",
-  "share-project-description": "Share your project with the community and get feedback.",
-  "newsletter-title": "Join our newsletter",
-  "newsletter-subtitle": "Get the latest updates and news about Project Shelf",
-  "enter-email": "Enter your email",
-  "subscribe": "Subscribe",
-  "total-likes": "Total Likes"
+  "signup": "Registrarse",
+  "likes:": "Me gusta",
+  "top-creators": "Creadores destacados",
+  "top-creators-subtitle": "Descubre a los creadores mejor valorados de nuestra comunidad",
+  "view-rankings": "Ver clasificaciones",
+  "discover-more-projects": "Descubre más proyectos",
+  "discover-more-projects-subtitle": "Explora nuevos proyectos en tendencia",
+  "see-all-projects": "Ver todos los proyectos",
+  "see-project": "Ver proyecto",
+  "how-it-works": "Cómo funciona",
+  "find-out": "Descubre cómo empezar",
+  "sign-up": "Registrarse",
+  "sign-up-description": "Regístrate con tu cuenta de GitHub.",
+  "create-a-project": "Crear un proyecto",
+  "create-project-description": "Crea un proyecto y agrega una descripción, etiquetas e imagen de portada.",
+  "share-project": "Comparte tu proyecto",
+  "share-project-description": "Comparte tu proyecto con la comunidad y recibe comentarios.",
+  "newsletter-title": "Únete a nuestro boletín",
+  "newsletter-subtitle": "Recibe las últimas actualizaciones y noticias sobre Project Shelf",
+  "enter-email": "Ingresa tu correo electrónico",
+  "subscribe": "Suscribirse",
+  "total-likes": "Me gusta totales"
 }
