--- a/apps/web/public/locales/hi/create-project.json
+++ b/apps/web/public/locales/hi/create-project.json
@@ -1,4 +1,4 @@
 {
-  "seo-title": "Submit a Project",
-  "seo-description": "Submit a project to the portfolio"
+  "seo-title": "प्रोजेक्ट सबमिट करें",
+  "seo-description": "पोर्टफोलियो में प्रोजेक्ट सबमिट करें"
 }
