--- a/apps/web/public/locales/hi/home.json
+++ b/apps/web/public/locales/hi/home.json
@@ -1,27 +1,27 @@
 {
-  "title": "Discover the coolest projects",
-  "description": "Upload and share your projects with our community. A perfect place for students, professionals, and hobbyists to showcase their work.",
+  "title": "सबसे शानदार परियोजनाएं खोजें",
+  "description": "हमारे समुदाय के साथ अपने परियोजनाएं अपलोड करें और साझा करें। छात्र, पेशेवर और शौकिया व्यक्तियों के लिए यह एक परिपूर्ण स्थान है जहां वे अपने काम को प्रदर्शित कर सकते हैं।",
   "seo-title": "Project Shelf",
-  "signup": "Sign up",
-  "likes:": "Likes",
-  "top-creators": "Top Creators",
-  "top-creators-subtitle": "Checkout top rated creators in our community",
-  "view-rankings": "View Rankings",
-  "discover-more-projects": "Discover More Projects",
-  "discover-more-projects-subtitle": "Explore new trending projects",
-  "see-all-projects": "See All Projects",
-  "see-project": "See Project",
-  "how-it-works": "How it works",
-  "find-out": "Find out how to get started",
-  "sign-up": "Sign up",
-  "sign-up-description": "Sign up with your GitHub account.",
-  "create-a-project": "Create a project",
-  "create-project-description": "Create a project and add a description, tags, and a cover image.",
-  "share-project": "Share your project",
-  "share-project-description": "Share your project with the community and get feedback.",
-  "newsletter-title": "Join our newsletter",
-  "newsletter-subtitle": "Get the latest updates and news about Project Shelf",
-  "enter-email": "Enter your email",
-  "subscribe": "Subscribe",
-  "total-likes": "Total Likes"
+  "signup": "साइन अप करें",
+  "likes:": "पसंद",
+  "top-creators": "शीर्ष रचनाकार",
+  "top-creators-subtitle": "हमारे समुदाय में उच्च रेटिंग वाले रचनाकारों को देखें",
+  "view-rankings": "रैंकिंग देखें",
+  "discover-more-projects": "और परियोजनाएं खोजें",
+  "discover-more-projects-subtitle": "नए ट्रेंडिंग परियोजनाएं खोजें",
+  "see-all-projects": "सभी परियोजनाएं देखें",
+  "see-project": "परियोजना देखें",
+  "how-it-works": "यह कैसे काम करता है",
+  "find-out": "शुरुआत कैसे करें इसे जानें",
+  "sign-up": "साइन अप करें",
+  "sign-up-description": "अपने GitHub खाते से साइन अप करें।",
+  "create-a-project": "परियोजना बनाएं",
+  "create-project-description": "एक परियोजना बनाएं और विवरण, टैग और एक कवर इमेज जोड़ें।",
+  "share-project": "अपनी परियोजना साझा करें",
+  "share-project-description": "समुदाय के साथ अपनी परियोजना साझा करें और प्रतिक्रिया प्राप्त करें।",
+  "newsletter-title": "हमारे सप्ताहिक समाचार पत्रिका में शामिल हों",
+  "newsletter-subtitle": "प्रोजेक्ट शेल्फ के बारे में नवीनतम अपडेट्स और समाचार प्राप्त करें",
+  "enter-email": "अपना ईमेल दर्ज करें",
+  "subscribe": "सदस्यता लें",
+  "total-likes": "कुल पसंद"
 }
