--- a/apps/web/public/locales/hi/user-edit.json
+++ b/apps/web/public/locales/hi/user-edit.json
@@ -1,16 +1,16 @@
 {
-  "edit-success": "Profile updated successfully.",
-  "edit-failure": "Failed to update profile.",
-  "avatar-label": "Drop your avatar",
-  "cover-label": "Drop your cover",
-  "name-description": "We're big on real names around here, so people know who's who.",
-  "name": "Name",
-  "location": "Location",
-  "website": "Website",
-  "twitter": "Twitter",
-  "discord": "Discord",
-  "bio": "Bio",
-  "bio-description": "Brief description for your profile.",
-  "save-profile": "Save Profile",
-  "seo-title": "Edit Profile"
+  "edit-success": "प्रोफ़ाइल सफलतापूर्वक अपडेट की गई।",
+  "edit-failure": "प्रोफ़ाइल अपडेट करने में विफल हुआ।",
+  "avatar-label": "अपना अवतार यहाँ ड्रॉप करें",
+  "cover-label": "अपना कवर यहाँ ड्रॉप करें",
+  "name-description": "हम यहां वास्तविक नामों पर ज़ोर देते हैं, ताकि लोग एक दूसरे को पहचान सकें।",
+  "name": "नाम",
+  "location": "स्थान",
+  "website": "वेबसाइट",
+  "twitter": "ट्विटर",
+  "discord": "डिस्कॉर्ड",
+  "bio": "बायो",
+  "bio-description": "प्रोफ़ाइल के लिए संक्षेप में विवरण।",
+  "save-profile": "प्रोफ़ाइल सहेजें",
+  "seo-title": "प्रोफ़ाइल संपादित करें"
 }
