--- a/apps/web/public/locales/ko/about.json
+++ b/apps/web/public/locales/ko/about.json
@@ -1,6 +1,7 @@
 {
-  "title": "Project Shelf Contributors",
-  "seo-title": "About Project Shelf",
-  "about": "About",
-  "contributions": "contributions"
+  "title": "Project Shelf 기여자들",
+  "seo-title": "소개",
+  "description": "우리에 대해 더 알아보세요. 학생들, 전문가들 및 취미를 가진 사람들이 자신의 작품을 자랑할 수 있는 완벽한 장소입니다.",
+  "about": "소개",
+  "contributions": "기여"
 }
