--- a/apps/web/public/locales/ko/create-project.json
+++ b/apps/web/public/locales/ko/create-project.json
@@ -1,4 +1,4 @@
 {
-  "seo-title": "Submit a Project",
-  "seo-description": "Submit a project to the portfolio"
+  "seo-title": "프로젝트 제출",
+  "seo-description": "포트폴리오에 프로젝트 제출하기"
 }
