--- a/apps/web/public/locales/ko/home.json
+++ b/apps/web/public/locales/ko/home.json
@@ -1,27 +1,27 @@
 {
-  "title": "Discover the coolest projects",
-  "description": "Upload and share your projects with our community. A perfect place for students, professionals, and hobbyists to showcase their work.",
+  "title": "가장 멋진 프로젝트를 발견하세요",
+  "description": "우리 커뮤니티와 여러분의 프로젝트를 업로드하고 공유하세요. 학생, 전문가, 취미 개발자들이 자신의 작품을 자랑할 수 있는 완벽한 장소입니다.",
   "seo-title": "Project Shelf",
-  "signup": "Sign up",
-  "likes:": "Likes",
-  "top-creators": "Top Creators",
-  "top-creators-subtitle": "Checkout top rated creators in our community",
-  "view-rankings": "View Rankings",
-  "discover-more-projects": "Discover More Projects",
-  "discover-more-projects-subtitle": "Explore new trending projects",
-  "see-all-projects": "See All Projects",
-  "see-project": "See Project",
-  "how-it-works": "How it works",
-  "find-out": "Find out how to get started",
-  "sign-up": "Sign up",
-  "sign-up-description": "Sign up with your GitHub account.",
-  "create-a-project": "Create a project",
-  "create-project-description": "Create a project and add a description, tags, and a cover image.",
-  "share-project": "Share your project",
-  "share-project-description": "Share your project with the community and get feedback.",
-  "newsletter-title": "Join our newsletter",
-  "newsletter-subtitle": "Get the latest updates and news about Project Shelf",
-  "enter-email": "Enter your email",
-  "subscribe": "Subscribe",
-  "total-likes": "Total Likes"
+  "signup": "가입하기",
+  "likes:": "좋아요",
+  "top-creators": "우수 창작자",
+  "top-creators-subtitle": "우리 커뮤니티에서 평가가 높은 창작자들을 확인하세요",
+  "view-rankings": "랭킹 보기",
+  "discover-more-projects": "더 많은 프로젝트 발견하기",
+  "discover-more-projects-subtitle": "새롭고 트렌드인 프로젝트들을 살펴보세요",
+  "see-all-projects": "모든 프로젝트 보기",
+  "see-project": "프로젝트 보기",
+  "how-it-works": "사용 방법",
+  "find-out": "시작하는 방법 알아보기",
+  "sign-up": "가입하기",
+  "sign-up-description": "GitHub 계정으로 가입하세요.",
+  "create-a-project": "프로젝트 생성하기",
+  "create-project-description": "프로젝트를 생성하고 설명, 태그, 커버 이미지를 추가하세요.",
+  "share-project": "프로젝트 공유하기",
+  "share-project-description": "프로젝트를 커뮤니티와 공유하고 피드백을 받으세요.",
+  "newsletter-title": "우리의 뉴스레터 가입하기",
+  "newsletter-subtitle": "최신 업데이트와 뉴스를 받아보세요",
+  "enter-email": "이메일 주소를 입력하세요",
+  "subscribe": "구독하기",
+  "total-likes": "전체 좋아요 수"
 }
