--- a/apps/web/public/locales/ko/user-edit.json
+++ b/apps/web/public/locales/ko/user-edit.json
@@ -1,16 +1,16 @@
 {
-  "edit-success": "Profile updated successfully.",
-  "edit-failure": "Failed to update profile.",
-  "avatar-label": "Drop your avatar",
-  "cover-label": "Drop your cover",
-  "name-description": "We're big on real names around here, so people know who's who.",
-  "name": "Name",
-  "location": "Location",
-  "website": "Website",
-  "twitter": "Twitter",
-  "discord": "Discord",
-  "bio": "Bio",
-  "bio-description": "Brief description for your profile.",
-  "save-profile": "Save Profile",
-  "seo-title": "Edit Profile"
+  "edit-success": "프로필이 성공적으로 업데이트되었습니다.",
+  "edit-failure": "프로필 업데이트에 실패했습니다.",
+  "avatar-label": "아바타를 이곳에 놓아주세요.",
+  "cover-label": "커버 이미지를 이곳에 놓아주세요.",
+  "name-description": "여기서는 실명을 중요시하며, 사람들이 누구인지 알 수 있도록 합니다.",
+  "name": "이름",
+  "location": "위치",
+  "website": "웹사이트",
+  "twitter": "트위터",
+  "discord": "디스코드",
+  "bio": "자기소개",
+  "bio-description": "프로필에 대한 간단한 설명입니다.",
+  "save-profile": "프로필 저장",
+  "seo-title": "프로필 수정"
 }
