--- a/apps/web/public/locales/ne/about.json
+++ b/apps/web/public/locales/ne/about.json
@@ -1,6 +1,7 @@
 {
-  "title": "Project Shelf Contributors",
-  "seo-title": "About Project Shelf",
-  "about": "About",
-  "contributions": "contributions"
+  "title": "Project Shelf योगदानहरू",
+  "seo-title": "बारेमा",
+  "description": "हाम्रो बारेमा थप जान्नुहोस्। छात्रहरू, पेशेवरहरू र शौकिया व्यक्तिहरूको काम प्रदर्शन गर्नको लागि एक परिपूर्ण स्थान।",
+  "about": "बारेमा",
+  "contributions": "योगदानहरू"
 }
