--- a/apps/web/public/locales/ne/create-project.json
+++ b/apps/web/public/locales/ne/create-project.json
@@ -1,4 +1,4 @@
 {
-  "seo-title": "Submit a Project",
-  "seo-description": "Submit a project to the portfolio"
+  "seo-title": "परियोजना सबमिट गर्नुहोस्",
+  "seo-description": "पोर्टफोलियोमा परियोजना सबमिट गर्नुहोस्"
 }
