--- a/apps/web/public/locales/ne/home.json
+++ b/apps/web/public/locales/ne/home.json
@@ -1,27 +1,27 @@
 {
-  "title": "Discover the coolest projects",
-  "description": "Upload and share your projects with our community. A perfect place for students, professionals, and hobbyists to showcase their work.",
+  "title": "सबैभन्दा राम्रो परियोजनाहरू खोज्नुहोस्",
+  "description": "हाम्रो समुदायसँग आफ्ना परियोजनाहरू अपलोड गर्नुहोस् र साझा गर्नुहोस्। विद्यार्थीहरू, व्यावसायिक र शौकिया व्यक्तिहरूको काम देखाउनको लागि यो एक परिपूर्ण स्थान हो।",
   "seo-title": "Project Shelf",
-  "signup": "Sign up",
-  "likes:": "Likes",
-  "top-creators": "Top Creators",
-  "top-creators-subtitle": "Checkout top rated creators in our community",
-  "view-rankings": "View Rankings",
-  "discover-more-projects": "Discover More Projects",
-  "discover-more-projects-subtitle": "Explore new trending projects",
-  "see-all-projects": "See All Projects",
-  "see-project": "See Project",
-  "how-it-works": "How it works",
-  "find-out": "Find out how to get started",
-  "sign-up": "Sign up",
-  "sign-up-description": "Sign up with your GitHub account.",
-  "create-a-project": "Create a project",
-  "create-project-description": "Create a project and add a description, tags, and a cover image.",
-  "share-project": "Share your project",
-  "share-project-description": "Share your project with the community and get feedback.",
-  "newsletter-title": "Join our newsletter",
-  "newsletter-subtitle": "Get the latest updates and news about Project Shelf",
-  "enter-email": "Enter your email",
-  "subscribe": "Subscribe",
-  "total-likes": "Total Likes"
+  "signup": "साइन अप गर्नुहोस्",
+  "likes:": "पसन्दहरू",
+  "top-creators": "शीर्ष रचनाकारहरू",
+  "top-creators-subtitle": "हाम्रो समुदायमा शीर्ष दर्जा भएका रचनाकारहरू हेर्नुहोस्",
+  "view-rankings": "दर्ता हेर्नुहोस्",
+  "discover-more-projects": "थप परियोजनाहरू खोज्नुहोस्",
+  "discover-more-projects-subtitle": "नयाँ प्रसिद्ध परियोजनाहरू अन्वेषण गर्नुहोस्",
+  "see-all-projects": "सबै परियोजनाहरू हेर्नुहोस्",
+  "see-project": "परियोजना हेर्नुहोस्",
+  "how-it-works": "कसरी काम गर्दछ?",
+  "find-out": "सुरु हुने तरिका खोज्नुहोस्",
+  "sign-up": "साइन अप गर्नुहोस्",
+  "sign-up-description": "तपाईंको GitHub खातामा साइन अप गर्नुहोस्।",
+  "create-a-project": "परियोजना सिर्जना गर्नुहोस्",
+  "create-project-description": "परियोजना सिर्जना गर्नुहोस् र विवरण, ट्याग र एक कवर तस्वीर थप्नुहोस्।",
+  "share-project": "तपाईंको परियोजना साझा गर्नुहोस्",
+  "share-project-description": "परियोजना समुदायसँग साझा गर्नुहोस् र प्रतिक्रिया प्राप्त गर्नुहोस्।",
+  "newsletter-title": "हाम्रो समाचार पत्रिका समुहमा सामेल होइनुहोस्",
+  "newsletter-subtitle": "प्रोजेक्ट शेल्फको नवीनतम अपडेट र समाचारहरू प्राप्त गर्नुहोस्",
+  "enter-email": "ईमेल टाइप गर्नुहोस्",
+  "subscribe": "सदस्यता लिनुहोस्",
+  "total-likes": "कुल पसन्दहरू"
 }
