--- a/apps/web/public/locales/ne/user-edit.json
+++ b/apps/web/public/locales/ne/user-edit.json
@@ -1,16 +1,16 @@
 {
-  "edit-success": "Profile updated successfully.",
-  "edit-failure": "Failed to update profile.",
-  "avatar-label": "Drop your avatar",
-  "cover-label": "Drop your cover",
-  "name-description": "We're big on real names around here, so people know who's who.",
-  "name": "Name",
-  "location": "Location",
-  "website": "Website",
-  "twitter": "Twitter",
-  "discord": "Discord",
-  "bio": "Bio",
-  "bio-description": "Brief description for your profile.",
-  "save-profile": "Save Profile",
-  "seo-title": "Edit Profile"
+  "edit-success": "प्रोफाइल सफलतापूर्वक अपडेट गरियो।",
+  "edit-failure": "प्रोफाइल अपडेट गर्न असफल भयो।",
+  "avatar-label": "तपाईंको अवतार यहाँ राख्नुहोस्",
+  "cover-label": "तपाईंको कवर यहाँ राख्नुहोस्",
+  "name-description": "हामी यहाँमा वास्तविक नामलाई महत्व दिन्छौं, यसको बारेमा लोगहरूले थाहा पाउन सक्छ।",
+  "name": "नाम",
+  "location": "स्थान",
+  "website": "वेबसाइट",
+  "twitter": "ट्विटर",
+  "discord": "डिस्कोर्ड",
+  "bio": "जीवनी",
+  "bio-description": "प्रोफाइलको लागि संक्षेप विवरण।",
+  "save-profile": "प्रोफाइल सहेज्नुहोस्",
+  "seo-title": "प्रोफाइल सम्पादन गर्नुहोस्"
 }
