--- a/apps/web/public/locales/ne/user.json
+++ b/apps/web/public/locales/ne/user.json
@@ -1,9 +1,12 @@
 {
-  "bio": "Bio",
-  "location": "Location",
-  "follow": "Follow",
-  "unfollow": "Unfollow",
-  "follower_count_one": "{{count}} Follower",
-  "follower_count_other": "{{count}} Followers",
-  "user_not_found": "User not found"
+  "bio": "जीवनी",
+  "location": "स्थान",
+  "follow": "अनुसरण गर्नुहोस्",
+  "unfollow": "अनुसरण छोड्नुहोस्",
+  "follower_count_one": "{{count}} अनुयायी",
+  "follower_count_other": "{{count}} अनुयायीहरू",
+  "user_not_found": "प्रयोगकर्ता फेला परेन",
+  "projects": "परियोजनाहरू",
+  "likes": "लाइकहरू",
+  "followers": "अनुयायीहरू"
 }
