--- a/apps/web/public/locales/ne/common.json
+++ b/apps/web/public/locales/ne/common.json
@@ -1,34 +1,34 @@
 {
   "project-shelf": "Project Shelf",
-  "discover-projects": "Discover the coolest projects",
-  "join-community": "Join the Community",
-  "rankings": "Rankings",
-  "explore": "Explore",
-  "join-digest": "Join our weekly digest",
-  "get-promotions": "Get exclusive promotions & updates straight to your inbox.",
-  "subscribe": "Subscribe",
-  "about": "About",
-  "top": "Top",
-  "projects": "Projects",
-  "creators": "Creators",
-  "add-project": "Add Project",
-  "profile": "Profile",
-  "edit-profile": "Edit Profile",
-  "sign-out": "Sign Out",
-  "search": "Search",
-  "login": "Login",
-  "cancel": "Cancel",
-  "close": "Close",
-  "submit": "Submit",
-  "continue": "Continue",
-  "edit": "Edit",
-  "delete": "Delete",
-  "yes": "Yes",
-  "no": "No",
-  "select-image": "Select Image",
-  "create-account-or-login": "Please create an account or login for this action",
-  "sign-in-to-discover": "Sign in to discover new projects and interact",
-  "all-rights-reserved": " ©{{year}} Project Shelf. All rights reserved.",
+  "discover-projects": "सबैभन्दा राम्रो परियोजनाहरू खोज्नुहोस्",
+  "join-community": "समुदायमा सामेल हुनुहोस्",
+  "rankings": "स्थानको मान्यता",
+  "explore": "अन्वेषण गर्नुहोस्",
+  "join-digest": "हाम्रो साप्ताहिक सारलाई साथ दिनुहोस्",
+  "get-promotions": "ईमेलमा एक्सक्लूसिभ प्रमोशनहरू र अपडेटहरू प्राप्त गर्नुहोस्।",
+  "subscribe": "सदस्यता लिनुहोस्",
+  "about": "बारेमा",
+  "top": "शीर्ष",
+  "projects": "परियोजनाहरू",
+  "creators": "सिर्जना गर्ने व्यक्तिहरू",
+  "add-project": "परियोजना थप्नुहोस्",
+  "profile": "प्रोफाइल",
+  "edit-profile": "प्रोफाइल सम्पादन गर्नुहोस्",
+  "sign-out": "साइन आउट गर्नुहोस्",
+  "search": "खोज्नुहोस्",
+  "login": "लगइन गर्नुहोस्",
+  "cancel": "रद्द गर्नुहोस्",
+  "close": "बन्द गर्नुहोस्",
+  "submit": "पेश गर्नुहोस्",
+  "continue": "जारी राख्नुहोस्",
+  "edit": "सम्पादन गर्नुहोस्",
+  "delete": "मेटाउनुहोस्",
+  "yes": "हो",
+  "no": "होइन",
+  "select-image": "तस्वीर चयन गर्नुहोस्",
+  "create-account-or-login": "कृपया यस कार्यको लागि खाता सिर्जना गर्नुहोस् वा लगइन गर्नुहोस्",
+  "sign-in-to-discover": "नयाँ परियोजनाहरू खोज्न र संवाद गर्नका लागि साइन इन गर्नुहोस्",
+  "all-rights-reserved": "©{{year}} प्रोजेक्ट शेल्फ। सर्वाधिकार सुरक्षित छ।",
   "privacy-policy": "गोपनीयता नीति",
-  "terms-and-conditions": "नियम तथा शर्तहरू"
+  "terms-and-conditions": "नियम र शर्तहरू"
 }
