fix: refactor login layout

--- a/apps/web/public/locales/en/login.json
+++ b/apps/web/public/locales/en/login.json
@@ -1,5 +1,5 @@
 {
-  "login-title": "Login",
+  "login-title": "Start your journey",
   "login-description": "Choose a login method",
   "github": "Login with Github",
   "discord": "Login with Discord"
