fix: small ui issues

--- a/apps/web/public/locales/en/common.json
+++ b/apps/web/public/locales/en/common.json
@@ -30,5 +30,6 @@
   "sign-in-to-discover": "Sign in to discover new projects and interact",
   "all-rights-reserved": " ©{{year}} Project Shelf. All rights reserved.",
   "privacy-policy": "Privacy Policy",
-  "terms-and-conditions": "Terms and Conditions"
+  "terms-and-conditions": "Terms and Conditions",
+  "enter-email": "Enter your email"
 }
