--- a/apps/web/public/locales/es/common.json
+++ b/apps/web/public/locales/es/common.json
@@ -30,5 +30,6 @@
   "sign-in-to-discover": "Inicia sesión para descubrir nuevos proyectos e interactuar",
   "all-rights-reserved": " ©{{year}} Project Shelf. Todos los derechos reservados.",
   "privacy-policy": "Política de privacidad",
-  "terms-and-conditions": "Términos y condiciones"
+  "terms-and-conditions": "Términos y condiciones",
+  "enter-email": "Ingresa tu correo electrónico"
 }
