--- a/apps/web/public/locales/hi/common.json
+++ b/apps/web/public/locales/hi/common.json
@@ -30,5 +30,6 @@
   "sign-in-to-discover": "नए परियोजनाएं खोजने और इंटरैक्ट करने के लिए साइन इन करें",
   "all-rights-reserved": " ©{{year}} Project Shelf। सभी अधिकार सुरक्षित।",
   "privacy-policy": "गोपनीयता नीति",
-  "terms-and-conditions": "नियम और शर्तें"
+  "terms-and-conditions": "नियम और शर्तें",
+  "enter-email": "अपना ईमेल दर्ज करें"
 }
