--- a/apps/web/public/locales/ko/common.json
+++ b/apps/web/public/locales/ko/common.json
@@ -30,5 +30,6 @@
   "sign-in-to-discover": "새로운 프로젝트를 발견하고 상호작용하려면 로그인하세요",
   "all-rights-reserved": " ©{{year}} Project Shelf. 판권 소유.",
   "privacy-policy": "개인정보 처리 방침",
-  "terms-and-conditions": "이용 약관"
+  "terms-and-conditions": "이용 약관",
+  "enter-email": "이메일 주소를 입력하세요"
 }
