--- a/apps/web/public/locales/ne/common.json
+++ b/apps/web/public/locales/ne/common.json
@@ -30,5 +30,6 @@
   "sign-in-to-discover": "नयाँ परियोजनाहरू खोज्न र संवाद गर्नका लागि साइन इन गर्नुहोस्",
   "all-rights-reserved": "©{{year}} प्रोजेक्ट शेल्फ। सर्वाधिकार सुरक्षित छ।",
   "privacy-policy": "गोपनीयता नीति",
-  "terms-and-conditions": "नियम र शर्तहरू"
+  "terms-and-conditions": "नियम र शर्तहरू",
+  "enter-email": "ईमेल टाइप गर्नुहोस्"
 }
